[package]
name = "rlua-derive-unofficial"
version = "0.1.0"
authors = ["Patrick Barrett <patrick.barrett@smartthings.com>"]
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = [ "extra-traits" ] }
quote = "1"
rlua = "0.17"
Inflector = "0.11"
